# code

./: .gitignore  AI_CHAT_COMPLETE_SOLUTION.md  AI_CHAT_PANEL_STATUS.md  AI_CHAT_TROUBLESHOOTING.md  AI_CHAT_UI_COMPONENTS.md  AI_PANEL_WIRING_COMPLETE.md  AI_SETTINGS_MAP.md  AI_SETTINGS_TESTS.md  BACKEND_FIXED.md  BRIDGE_INTEGRATION_STATUS.md  BUILD_COMPLETE_REPORT.md  BUTTONS_NOW_WORKING.md  BUTTON_NOT_VISIBLE.md  CLEAN_AI_CHAT_UI.md  COMPILATION_ERROR_ANALYSIS.md  CONNECTION_FIXED.md  CONTEXT_IPC_BRIDGE_COMPLETE.md  CONTEXT_SYSTEM_UI_INTEGRATION.md  CRITICAL_PRODUCTION_STATUS.md  Cargo.toml  DAY1_COMPLETE.md  DROPDOWN_FIX_FINAL.md  EXACT_HTML_STRUCTURE.md  FINAL_IPC_COMPLETION_REPORT.md  FINAL_TEST.sh  FLOEM_FINDINGS.md  FULL_STACK_IPC_TEST_PLAN.md  HOW_TO_SEE_AI_CHAT.md  HOW_TO_USE_AI_CHAT.md  IMPORTANT_DONT_UPDATE.md  INTEGRATION_GUIDE.md  IPC_INTEGRATION_COMPLETE.md  IPC_TEST_EXECUTION_RESULTS.md  IPC_TEST_RESULTS_AND_METRICS.md  KEYBINDINGS_ANALYSIS.md  LSP_GATEWAY_ACCEPTANCE_CHECKLIST.md  LSP_GATEWAY_CORE_COMPLETE.md  LSP_GATEWAY_INFRASTRUCTURE_COMPLETE.md  LSP_GATEWAY_PHASE2_COMPLETE.md  LSP_GATEWAY_PHASE3_COMPLETE.md  (+76 more)
lapce-ai/: .env.example  03-OPENAI-ANTHROPIC-PROVIDERS.md  03-PROVIDER-TRAIT-ARCHITECTURE.md  03-REMAINING-PROVIDERS.md  ADAPTER_COMPLETION.md  AGGRESSIVE_FIX_ALL.sh  AI_PROVIDERS_ANALYSIS.md  AI_PROVIDERS_STATUS.md  ALL_PROVIDERS_COMPLETE.md  ARCHITECTURE_INTEGRATION_PLAN.md  AUTO_START_OPTIONS.md  BATCH_FIX_PLAN.md  BOTH_CRITERIA_MET.md  BREAKTHROUGH.md  CANARY_ROLLOUT_PLAN.md  CHANGELOG.md  COMPILATION_FIXES.md  COMPILATION_FIXES_COMPLETE.md  COMPLETE_IMPLEMENTATION_TODO.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_COMPLETION_REPORT.md  COMPREHENSIVE_TEST_STATUS.md  CONFIRMED_MEMORY_ISOLATION.md  CONNECTION_GUIDE.md  CONNECTION_POOL_PERFORMANCE_REPORT.md  CONNECTION_POOL_TODO.md  CONTEXT_PORTING_COMPLETE.md  CONTEXT_PORTING_PHASE2_COMPLETE.md  CONTEXT_SYSTEM_COMPLETE.md  CONTEXT_SYSTEM_FINAL_SUMMARY.md  CONTEXT_SYSTEM_PRE_IPC_COMPLETE.md  CONTEXT_SYSTEM_SECURITY_REVIEW.md  CRITICAL_BUG_CONFIRMED.md  CRITICAL_FINDING.md  CRITICAL_FIXES_COMPLETE.md  CROSS_OS_IPC_IMPLEMENTATION_COMPLETE.md  CROSS_PLATFORM_IPC_COMPLETE.md  CROSS_PLATFORM_IPC_DESIGN.md  Cargo.toml  Cargo.toml.backup  (+183 more)
lapce-ai-rust/: .gitignore  ARCHITECTURE_INTEGRATION_PLAN.md  CLEANUP_AND_REORGANIZATION_COMPLETE.md  Cargo.toml  Cargo.toml.bak  DEEP_ANALYSIS_COMPLETION_REPORT.md  Dockerfile  PHASE_1_2_COMPLETE.md  README_IPC_PRODUCTION.md  STREAMING_PIPELINE_ANALYSIS.md  config.toml  final_fix_all.sh  lapce-ipc.service  lapce-ipc.toml  practical.py  quick_fix_build.sh  validate_ipc_migration.sh
lapce-ai-rust/CST-tree-sitter/: 60_ESSENTIAL_LANGUAGES_DEEP_RESEARCH.md  60_LANGUAGES_PRESERVE_CRITERIA.md  ACTUAL_WORKING_DEPENDENCIES.md  ACTUAL_WORKING_LANGUAGES.md  ANALYZE.md  ANSWER.md  CODEX_29_LANGUAGES_STATUS.md  CODEX_TYPE_RESOLUTION_VERIFICATION.md  CODEX_ULTRA_DEEP_ANALYSIS.md  COMPLETE_67_LANGUAGES_WITH_QUERIES.md  COMPLETE_LANGUAGE_COVERAGE.md  COMPREHENSIVE_TEST_REPORT.md  CURSOR_AI_COMPARISON.md  Cargo.toml  DEEP_ANALYSIS_ORIGINAL_QUERIES.md  FINAL_100_PERCENT_SUCCESS.md  FINAL_67_LANGUAGES_COMPLETE.md  FINAL_CST_MEMORY_ANSWER.md  FINAL_STATUS.md  FINAL_STATUS_95_PERCENT.md  FINAL_SYSTEM_STATUS.md  FINAL_TRANSLATION_STATUS.md  FINAL_VERIFICATION_67.py  FINAL_VERIFICATION_ALL_67.py  FIXED_FOR_30K_FILES.md  GENERATE_ALL_QUERIES.py  GENERATE_ALL_QUERY_SUBDIRS.py  ISSUES_FIXED_REPORT.md  LANGUAGE_COVERAGE_STRATEGY.md  LANGUAGE_SUPPORT_STATUS.md  LAPCE_CODEBASE_FINAL_REPORT.md  LAPCE_COMPREHENSIVE_TEST_REPORT.md  LAPCE_LSP_ANALYSIS.md  MEMORY_WITH_OPTIMIZATIONS.md  MIGRATION_PROGRESS.md  MISSING_LANGUAGES_STATUS.md  PARSER_MIGRATION_PLAN.md  PRODUCTION_100_PERCENT_SUCCESS.md  PRODUCTION_COMPLETE.md  PRODUCTION_PERFORMANCE_REPORT.md  (+38 more)
lapce-ai-rust/benches/: ipc_bench.rs  ipc_benchmark.rs  ipc_server_benchmark.rs  memory_benchmark.rs  performance_benchmark.rs  shared_memory_bench.rs
lapce-ai-rust/deploy/: config.toml
lapce-ai-rust/docs/: 09-MEMORY-MANAGEMENT.md  10-GIT-DIFF-OPERATIONS.md  10-MULTIFILE-OPERATIONS.md  29-STEP-06-ERROR-BENCHMARKS-REVISED.md  29-STEP-06-ERROR-BENCHMARKS.md  29-VSCODE-LAPCE-BRIDGE-FINAL-REVISED.md  29-VSCODE-LAPCE-BRIDGE-FINAL.md  ACTUAL-LAPCE-COMPONENT-MAPPING.md  CHUNK-00-ANALYSIS-COMPLETE.md  CHUNK-01-PROMPTS-SYSTEM.md  CHUNK-07-CONDENSE.md  CHUNK-08-CONFIG.md  CHUNK-10-CONTEXT-TRACKING.md  CHUNK-14-MENTIONS.md  CHUNK-16-PROTECT.md  CHUNK-21-24-I18N-LOCALES.md  CHUNK-25-SERVICES-SUMMARY.md  CHUNK-26-INTEGRATIONS.md  CHUNK-27-API-PROVIDERS.md  CHUNK-30-SHARED-UTILITIES.md  CHUNK-30-SHARED.md  CHUNK-31-UTILS.md  CHUNK-36-PACKAGES-EVALS-DEEP.md  CHUNK-40-TELEMETRY.md  DEEP-05-SERVICES.md  DEEP-06-HISTORY-COMPONENTS.md  DEEP-09-UI-PRIMITIVES.md  PHASE_8_PRODUCTION_DEPLOYMENT.md  README.md  RUST-TRANSLATION-ANALYSIS.md  UI-CHUNK-01-OVERVIEW.md  UI-CHUNK-02-CHAT-INTERFACE.md
lapce-ai-rust/examples/: complete_cache_architecture_test.rs  comprehensive_benchmark.rs  final_validation.rs  lancedb_validate.rs  performance_validation.rs  producer_consumer_test.rs  real_ultra_performance.rs  rust_vs_nodejs_benchmark.rs  test_1000_connections.rs  test_100k_scale.rs  test_cache_8_criteria.rs  test_concurrent_connections.rs  test_fast_performance.rs  test_full_pipeline.rs  test_gemini_api.rs  test_ipc_v2.rs  test_lancedb_100k.rs  test_optimized_performance.rs  test_optimized_v2.rs  test_performance_criteria.rs  test_real_shm.rs  test_reconnection.rs  test_ring_buffer.rs  test_working_shm.rs  ultra_performance_test.rs  verify_cache_performance.rs
lapce-ai-rust/lapce-plugin/: integration_test.js
lapce-ai-rust/optimized_ipc/: Cargo.toml
lapce-ai-rust/proto/: ipc.proto
lapce-ai-rust/scripts/: deploy.sh  load_test.sh
lapce-ai-rust/semantic_search/: Cargo.toml  FINAL_COMPREHENSIVE_ANALYSIS.md  FULL_6_TASKS_INTEGRATION_SUMMARY.md  PRODUCTION_INTEGRATION_COMPLETE.md  REAL_AWS_TEST_RESULTS.md  TASK6_COMPLETION_REPORT.md  simple_bench.rs  test_shared_mem.sh
lapce-ai-rust/src/: auto_reconnection.rs  buffer_management.rs  cache_integration.rs  cdn_integration.rs  ipc_config.rs  (+54 more)
(+5208 files in other folders)
