[package]
name = "lapce-ai-rust"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "AI-powered semantic code search and analysis for Lapce IDE"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/lapce-ai-rust"
keywords = ["ide", "semantic-search", "ai", "code-analysis", "lapce"]
categories = ["development-tools", "text-processing"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["local_models"]
local_models = ["candle-core", "candle-transformers", "candle-nn"]
onnx = ["ort"]
mimalloc = ["dep:mimalloc"]

[[bin]]
name = "cli_tools"
path = "src/bin/cli.rs"

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "memoryapi", "winnt", "minwindef"] }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
# Core
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
async-stream = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
futures-util = "0.3"
toml = "0.8"
bytes = "1.5"
bincode = "1.3"
rmp-serde = "1.1"

# Concurrency & Performance
crossbeam = "0.8"
rayon = "1.10"
parking_lot = "0.12"
dashmap = "6.1"
arc-swap = "1.7"
once_cell = "1.19"

# System & Platform
sysinfo = "0.31"
nix = { version = "0.29", features = ["signal"] }
sd-notify = "0.4"
num_cpus = "1.16"
dirs = "5.0"
directories = "5.0"
tempfile = "3.8"

# CLI & Configuration
clap = { version = "4.5", features = ["derive"] }

# Compression
flate2 = "1.0"
lz4_flex = "0.11"
zstd = "0.13"

# Storage & Caching
sled = "0.34"
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }

# Database
lancedb = "0.10"  # Use compatible version
tantivy = "0.22"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
sea-orm-migration = "1.1"

# Arrow & Data
arrow = "52.0"
arrow-array = "52.0"
arrow-schema = "52.0"
arrow-cast = "52.0"

# AI & ML
tokenizers = "0.21"
tiktoken-rs = "0.7.0"
hf-hub = "0.3"
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
ort = { version = "2.0.0-rc.8", optional = true, features = ["download-binaries"] }
ndarray = "0.16"

# AWS
aws-config = "1.5"
aws-sdk-bedrock = "1.72"
aws-sdk-bedrockruntime = "1.39"

# Web & HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
warp = "0.3"
axum = "0.7"
tower = "0.5"
tonic = "0.11"
prost = "0.12"
juniper = "0.16"
async-graphql = "7.0"
async-graphql-axum = "7.0"
utoipa = { version = "5.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# LSP
lsp-types = "0.95"
lsp-server = "0.7"
ropey = "1.6"

# Tracing & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
prometheus = "0.13"
indicatif = "0.17"

# Utilities
regex = "1.10"
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
url = "2.5"
base64 = "0.21"
thiserror = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

# File System
notify = "6.0"
memmap2 = "0.9"
ignore = "0.4"
walkdir = "2.5"
git2 = "0.18"
grep = "0.3"
governor = "0.6"

# Security & Crypto
blake3 = "1.5"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"

# Serialization & Memory
rkyv = { version = "0.7", features = ["validation"] }
shared_memory = "0.12"
raw_sync = "0.1"
mimalloc = { version = "0.1", optional = true }

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }

# Tree-sitter parsers
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"

# Other
heed = "0.20"

[workspace]
