[package]
name = "lapce-ai-rust"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "AI-powered semantic code search and analysis for Lapce IDE"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/lapce-ai-rust"
keywords = ["ide", "semantic-search", "ai", "code-analysis", "lapce"]
categories = ["development-tools", "text-processing"]

[profile.release]
opt-level = 3
lto = "thin"  # Changed from true (fat LTO) to thin LTO to reduce memory usage
codegen-units = 16  # Increased from 1 to allow parallel compilation
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
incremental = true

[features]
default = []
local_models = ["candle-core", "candle-nn", "candle-transformers", "ort"]
jemalloc = ["jemallocator"]
nuclear-tests = []
# Feature only available on Unix platforms - used to exclude Unix-only binaries on Windows
unix-bins = []
# LSP Gateway - Native multi-language LSP support
lsp_gateway = ["cst_integration", "lapce-tree-sitter"]
cst_integration = ["lapce-tree-sitter"]

[[bin]]
name = "cli_tools"
path = "src/bin/cli.rs"

[[bin]]
name = "lapce-ai-cli"
path = "src/bin/lapce-ai-cli.rs"

[[bin]]
name = "lapce_ipc_server"
path = "src/bin/lapce_ipc_server.rs"

[[bin]]
name = "ipc_test_server"
path = "src/bin/ipc_test_server.rs"

# Unix-only binaries (use mmap/munmap syscalls)
[[bin]]
name = "final_memory_optimized"
path = "src/bin/final_memory_optimized.rs"
required-features = ["unix-bins"]

[[bin]]
name = "memory_fixed_standalone"
path = "src/bin/memory_fixed_standalone.rs"
required-features = ["unix-bins"]

[[bin]]
name = "ipc_test_server_volatile"
path = "src/bin/ipc_test_server_volatile.rs"
required-features = ["unix-bins"]

[[bin]]
name = "production_stress_test"
path = "src/bin/production_stress_test.rs"
required-features = ["unix-bins"]

[[bin]]
name = "nuclear_stress_test"
path = "src/bin/nuclear_stress_test.rs"
required-features = ["unix-bins"]

[[bin]]
name = "stress_test_ipc"
path = "src/bin/stress_test_ipc.rs"
required-features = ["unix-bins"]

[[bin]]
name = "test_single_futex"
path = "src/bin/test_single_futex.rs"
required-features = ["unix-bins"]

[[bin]]
name = "test_volatile_ipc"
path = "src/bin/test_volatile_ipc.rs"
required-features = ["unix-bins"]

# Windows-only binaries
[[bin]]
name = "windows_ipc_server"
path = "src/bin/windows_ipc_server.rs"
required-features = []

[[bin]]
name = "windows_ipc_stress_test"
path = "src/bin/windows_ipc_stress_test.rs"
required-features = []

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.5"
num_cpus = "1.16"
sysinfo = "0.30"
quickcheck = "1.0"
test-case = "3.0"
rstest = "0.18"

[[bench]]
name = "tool_benchmarks"
harness = false

[[bench]]
name = "prompt_benchmarks"
harness = false

[[bench]]
name = "context_performance"
harness = false

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "memoryapi", "winnt", "minwindef"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory", 
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Security"
] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory", 
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Security"
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
sd-notify = "0.4"
procfs = "0.16"

[target.'cfg(any(target_os = "macos", target_os = "freebsd"))'.dependencies]
libc = "0.2"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
mimalloc = { version = "0.1", default-features = false }
# Core
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
async-stream = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
futures = "0.3"
futures-util = "0.3"
toml = "0.8"
bincode = "1.3"
rmp-serde = "1.1"

# Concurrency & Performance
crossbeam = "0.8"
rayon = "1.10"
parking_lot = "0.12"
dashmap = "6.0"
arc-swap = "1.7"
# System & Platform
sysinfo = "0.30"
nix = { version = "0.29", features = ["signal", "resource", "user"] }
num_cpus = "1.16"
dirs = "5.0"
directories = "5.0"
tempfile = "3.8"
# CLI & Configuration
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"

# Compression
flate2 = "1.0"
lz4_flex = "0.11"
zstd = "0.13"
zip = "0.6"

# Storage & Caching
redis = { version = "0.24", features = ["aio", "tokio-comp", "connection-manager"] }
uuid = { version = "1.6", features = ["v4"] }
moka = { version = "0.12", features = ["future"] }
bytes = "1.5"
smallvec = "1.11"
jemallocator = { version = "0.5", optional = true }

# Database
lancedb = "0.22"
tantivy = "0.22"
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
sea-orm-migration = "1.1"
sled = "0.34"

# Arrow & Data
arrow = "56"
arrow-array = "56"
arrow-schema = "56"
arrow-cast = "56"

# AI & ML
tokenizers = "0.21"
tiktoken-rs = "0.7.0"
hf-hub = "0.3"
candle-core = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
ort = { version = "2.0.0-rc.8", optional = true, features = ["download-binaries"] }
ndarray = "0.16"

# AWS
aws-config = "1.5"
aws-sdk-bedrock = "1.77"
aws-sdk-bedrockruntime = "1.76"
aws-credential-types = "1.2"
aws-types = "1.3"

# Web & HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
warp = "0.3"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["full"] }
tonic = "0.11"
prost = "0.12"
juniper = "0.16"
async-graphql = { version = "7.0", optional = true }
async-graphql-axum = { version = "7.0", optional = true }
utoipa = { version = "5.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Connection Pool
bb8 = "0.8"
bb8-redis = "0.15"

# HTTP/HTTPS Clients
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.26", features = ["http1", "http2", "native-tokio", "tls12"] }
http-body-util = "0.1"
http = "1.0"
tower-service = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tungstenite = "0.21"

# DNS Resolution
hickory-resolver = "0.24"

# Additional dependencies
sys-info = "0.9"
lru = "0.12"
webpki-roots = "0.26"
rustls-native-certs = "0.7"

# LSP
lsp-types = "0.95"
lsp-server = "0.7"
ropey = "1.6"

# Tracing & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry-otlp = "0.14"
indicatif = "0.17"

# Text processing
regex = "1.10"
similar = "2.3"
rand = "0.8"
strsim = "0.11"
url = "2.5"
base64 = "0.21"
lazy_static = "1.4"
# ... other dependencies
memmap2 = "0.9"
prometheus = "0.13"
arbitrary = { version = "1.3", features = ["derive"] }

# File System
notify = "6.0"
ignore = "0.4"
walkdir = "2.5"
git2 = "0.20"
grep = "0.3"
governor = "0.6"
globset = "0.4"
filetime = "0.2"

# XML
quick-xml = "0.36"

# Security & Crypto
blake3 = "1.5"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
rustls = "0.21"
rustls-pemfile = "1.0"

# Serialization & Memory
rkyv = { version = "0.7", features = ["validation"] }
shared_memory = "0.12"
raw_sync = "0.1"
crc32fast = "1.4"

# Scripting
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }

# Tree-sitter parsers
tree-sitter = "0.23"
lapce-tree-sitter = { path = "./CST-tree-sitter", optional = true }

# JSON Schema validation
jsonschema = "0.18"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23.0"

# Other
heed = "0.20"
dotenv = "0.15"
colored = "2.0"
html-escape = "0.2"
hdrhistogram = "7.5.4"
trash = "5.2.3"

# This is a workspace member of the parent /home/verma/lapce workspace
# Workspace configuration is in /home/verma/lapce/Cargo.toml

